[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xguard"
version = "0.0.1"
authors = [
  { name="John Gitahi", email="gitahi109@gmail.com" },
]
description = "yet another guard clause library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/johngitahi/xguard"
"Bug Tracker" = "https://github.com/johngitahi/xguard/issues"
